# BlingFire

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
blingfireclient.library/inc/: FAAllocator.h  FAAllocatorA.h  FAArrayCA.h  FAArray_cont_t.h  FAArray_pack.h  FABrResultCA.h  FAChains_pack_triv.h  FAConfig.h  FADictConfKeeper.h  FADictInterpreter_t.h  FADigitizer_dct_t.h  FADigitizer_t.h  FAEncodeUtils.h  FAFsmConst.h  FAGetIWsCA.h  FAGetIWs_pack_triv.h  FAGlobalConfKeeper_packaged.h  FAHmmTagger_l1.h  FAHyphConfKeeper_packaged.h  FAImageDump.h  FAIwMap_pack.h  FALDB.h  FALexTools_t.h  FALimits.h  FAMealyDfaCA.h  FAMealyDfa_pack_triv.h  FAMealyNfaCA.h  FAMorphLDB_t_packaged.h  FAMphInterpretTools_t.h  FAMsg.h  FAMultiMapCA.h  FAMultiMap_pack.h  FAMultiMap_pack_fixed.h  FAMultiMap_pack_mph.h  FAOffsetTable_pack.h  FAOw2IwCA.h  FAOw2Iw_pack_triv.h  FAParseTreeA.h  FAParseTree_memlfp.h  FAParserConfKeeper.h  (+50 more)
blingfireclient.library/src/: FAAllocator.cpp  FAArray_pack.cpp  FAChains_pack_triv.cpp  FADictConfKeeper.cpp  FAException.cpp  FAGetIWs_pack_triv.cpp  FAGlobalConfKeeper.cpp  FAHmmTagger_l1.cpp  FAHyphConfKeeper.cpp  FAImageDump.cpp  FAIwMap_pack.cpp  FALDB.cpp  FAMealyDfa_pack_triv.cpp  FAMsg.cpp  FAMultiMap_pack.cpp  FAMultiMap_pack_fixed.cpp  FAMultiMap_pack_mph.cpp  FANormalizeDiacriticsMapPreserve.cxx  FANormalizeDiacriticsMapProd.cxx  FANormalizeDiacriticsMapRemove.cxx  FAOffsetTable_pack.cpp  FAOw2Iw_pack_triv.cpp  FAParseTree_memlfp.cpp  FAParserConfKeeper.cpp  FARSDfa_pack_triv.cpp  FAState2Ow_pack_triv.cpp  FAState2Ows_pack_triv.cpp  FAStemmerLDB.cpp  FAStringArray_pack.cpp  FAT2PTable.cpp  FATs2PTable.cpp  FATsConfKeeper.cpp  FAUtf32ToLower.cpp  FAUtf32ToUpper.cpp  FAUtf32Utils.cpp  FAUtf8Utils.cpp  FAUtils_cl.cpp  FAW2PConfKeeper.cpp  FAW2SConfKeeper.cpp  FAWREConf_pack.cpp  (+4 more)
blingfirecompile.library/ext/: sample.makefile.inc  sample.sources  y2cpp.cmd  yypars.cxx
blingfirecompile.library/inc/: FAAct2ArrA.h  FAAct2Arr_css.h  FAAct2Arr_data.h  FAAct2Arr_score_tag.h  FAActionsA.h  FAActionsArrayA.h  FAActionsArray_static.h  FAAllocatorA.h  FAAny2AnyOther_global_t.h  FAAny2AnyOther_t.h  FAArrayPack.h  FAArray_p2ca.h  FAArray_t.h  FAAutIOTools.h  FAAutInterpretTools2_trbr_t.h  FAAutInterpretTools_fnfa_t.h  FAAutInterpretTools_pos_t.h  FAAutInterpretTools_t.h  FAAutInterpretTools_trbr_t.h  FABitArray.h  FABitMatrix_t.h  FABrResult.h  FABrResultA.h  FACalcIwEqClasses.h  FACalcMealy1.h  FACalcMealy2.h  FAChain2NumA.h  FAChain2Num_hash.h  FAChain2Num_judy.h  FAChains2MinDfa.h  FAChains2MinDfa_sort.h  FAChainsPack_triv.h  FACmpTrBrOws_greedy.h  FAColorGraph_t.h  FAConfParser.h  FACorpusIOTools_utf8.h  FACssLDB.h  FADfa2MealyNfa.h  FADfa2MinDfa_hg_t.h  FADfaPack_triv.h  (+176 more)
blingfirecompile.library/src/: FAAct2Arr_css.cpp  FAAct2Arr_data.cpp  FAAct2Arr_score_tag.cpp  FAActionsArray_static.cpp  FAAllocator.cpp  FAArrayPack.cpp  FAArray_p2ca.cpp  FAAutIOTools.cpp  FABitArray.cpp  FABrResult.cpp  FACalcIwEqClasses.cpp  FACalcMealy1.cpp  FACalcMealy2.cpp  FAChain2Num_hash.cpp  FAChain2Num_judy.cpp  FAChains2MinDfa.cpp  FAChains2MinDfa_sort.cpp  FAChainsPack_triv.cpp  FACmpTrBrOws_greedy.cpp  FAConfParser.cpp  FACorpusIOTools_utf8.cpp  FACssLDB.cpp  FADfa2MealyNfa.cpp  FADfaPack_triv.cpp  FADfaTopoGraph.cpp  FADfas2CommonNfa.cpp  FADict2Classifier.cpp  FADictSplit.cpp  FADictStr2SuffixRule.cpp  FAEncoder_delta_pref.cpp  FAEncoder_delta_pref_mask.cpp  FAEncoder_mask.cpp  FAEncoder_pm_dpm.cpp  FAEncoder_pref.cpp  FAEncoder_pref_mask.cpp  FAEpsilonGraph.cpp  FAEpsilonGraph_mealy.cpp  FAEpsilonRemoval.cpp  FAException.cpp  FAExtendClassifier_cxp.cpp  (+131 more)
blingfiretools/any_test/: any_test.cpp
blingfiretools/blingfiretokdll/: BlingFireTokLibSbdData.cxx  BlingFireTokLibWbdData.cxx  blingfiretokdll.cpp  blingfiretokdll.def  blingfiretokdll.h
blingfiretools/fa_align/: fa_align.cpp
blingfiretools/fa_align2chain/: fa_align2chain.cpp
blingfiretools/fa_bin2ngrams/: fa_bin2ngrams.cpp
blingfiretools/fa_build_conf/: fa_build_conf.cpp
blingfiretools/fa_chains2mindfa/: fa_chains2mindfa.cpp
buildTools/: linux-arm64-cross.cmake
cmake/: blingfire-config.cmake.in
dist-pypi/: .pypirc  README.md  setup.py
doc/: Bling Fire Tokenizer Demo.ipynb  lex.htm  tools.txt
ldbsrc/: Makefile.gnu  Makefile.nmake
nuget/: BlingFireNetStandard.sln  BlingFireNuget.sln  readme.md
projs/: fa_align.vcxproj  fa_align2chain.vcxproj  fa_bin2ngrams.vcxproj  fa_build_conf.vcxproj  fa_chains2mindfa.vcxproj  fa_charmap2mmap.vcxproj  fa_dfa2mindfa.vcxproj  fa_dfa2mph.vcxproj  fa_dict2classifier.vcxproj  fa_dict2suff.vcxproj  fa_dict_split.vcxproj  fa_dump2cpp.vcxproj  fa_encode.vcxproj  fa_enfa2nfa.vcxproj  fa_extend_cxp.vcxproj  fa_fsm2fsm.vcxproj  fa_fsm2fsm_iwec.vcxproj  fa_fsm2fsm_pack.vcxproj  fa_fsm_renum.vcxproj  fa_fsmfsm2minfsmfsm.vcxproj  fa_gcd.vcxproj  fa_hyph2chains.vcxproj  fa_hyphconv.vcxproj  fa_iwowsuff2pats.vcxproj  fa_lex.vcxproj  fa_line2chain_unicode.vcxproj  fa_line_format.vcxproj  fa_merge_dumps.vcxproj  fa_nfa2dfa.vcxproj  fa_nfa2nfa_any.vcxproj  fa_nfa2revnfa.vcxproj  fa_nfalist2nfa.vcxproj  fa_pats_select.vcxproj  fa_pr2wre.vcxproj  fa_re2nfa.vcxproj  fa_re2re_simplify.vcxproj  fa_s2ts.vcxproj  fa_sortbytes.vcxproj  fa_subst2re.vcxproj  fa_suff2chains.vcxproj  (+18 more)
scripts/: benchmark.py  blingfire_example.py  blingfiretok.py  fa_align_  fa_align_.cmd  fa_build_dict  fa_build_dict.cmd  fa_build_dict_fst  fa_build_dict_fst.cmd  fa_build_gc  fa_build_gc.cmd  fa_build_id2word  fa_build_lex  fa_build_lex.cmd  fa_build_ngrams  fa_build_ngrams.cmd  fa_build_parser  fa_build_parser.cmd  fa_build_pats  fa_build_pats.cmd  fa_build_segs  fa_build_segs.cmd  fa_build_subst  fa_build_subst.cmd  fa_build_suff  fa_build_suff.cmd  fa_build_w2t_prob  fa_build_w2t_prob.cmd  fa_build_word_guesser  fa_build_word_guesser.cmd  fa_build_wre  fa_build_wre.cmd  fa_cat_ratio  fa_cat_ratio.cmd  fa_combine  fa_combine.cmd  fa_conf2test_prm  fa_conf2test_prm.cmd  fa_count2prob  fa_count2prob.cmd  (+90 more)
wasm/: Makefile  blingfire.js  blingfire.wasm  blingfire_wrapper.js  example.html  main.cpp  readme.md
(+263 files in other folders)
